# ai-companion-odissey

./: LICENSE  README.md
part1-birth/: .gitignore  README.md  chatbot.py  graph.py  pyproject.toml  requirements.txt  test.py  utils.py
part2-memory/: chatbot.py  data.py  graph.py  pyproject.toml  requirements.txt
part2-observing/: README.md  chatbot.py  config.toml  pyproject.toml  requirements.txt  utils.py
part3-memory/: .gitignore  chatbot.py  data.py  hello.py  pyproject.toml  requirements.txt
part3-memory/resources/: database.sql
