[project]
name = "test"
version = "0.1.0"
description = "The Odyssey of Your AI Companion – Part 1: The Birth of a New Era with AWS Bedrock and Chainlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.1.404",
    "langchain-aws>=0.1.18",
    "langgraph>=0.2.19",
    "python-dotenv>=1.0.1",
]
