[project]
name = "part2-memory"
version = "0.2.0"
description = "The Odyssey of Your AI Companion – Part 2: Observing and Strengthening Memory with Langsmith, LangGraph, Chainlit, and AWS Aurora"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "asyncpg>=0.29.0",
    "chainlit==1.2.0",
    "ipython==8.27.0",
    "langchain-aws==0.2.1",
    "langgraph==0.2.28",
    "sqlalchemy>=2.0.35",
]
